<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AIrecipeGen">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="453dp"
        android:layout_height="905dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="16dp"
                android:drawablePadding="8dp"
                android:text="@string/title_recipe_generation"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:drawableEndCompat="@drawable/wand_shine_24px" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutIngredients"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ingredients">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewSelectedIngredientsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_selected_ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button6"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/orange"
                    android:drawableEnd="@drawable/close_24px"
                    android:drawablePadding="8dp"
                    android:text="@string/ingdnts2"
                    android:textColor="@android:color/white"
                    app:tint="@android:color/white" />

                <Button
                    android:id="@+id/button8"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/orange"
                    android:drawableEnd="@drawable/close_24px"
                    android:drawablePadding="8dp"
                    android:text="@string/ingdnts1"
                    android:textColor="@android:color/white"
                    app:tint="@android:color/white" />

                <Button
                    android:id="@+id/button7"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/orange"
                    android:drawableEnd="@drawable/close_24px"
                    android:drawablePadding="8dp"
                    android:text="@string/ingdnts3"
                    android:textColor="@android:color/white"
                    app:tint="@android:color/white" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPreferences"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_preferences">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPreferences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewSelectedIngredientsTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_selected_preferences"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonx1"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/orange"
                    android:drawableEnd="@drawable/close_24px"
                    android:drawablePadding="8dp"
                    android:text="@string/prf1"
                    android:textColor="@android:color/white"
                    app:tint="@android:color/white" />

                <Button
                    android:id="@+id/buttonx2"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/orange"
                    android:drawableEnd="@drawable/close_24px"
                    android:drawablePadding="8dp"
                    android:text="@string/prf2"
                    android:textColor="@android:color/white"
                    app:tint="@android:color/white" />

                <Button
                    android:id="@+id/buttonx3"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/orange"
                    android:drawableEnd="@drawable/close_24px"
                    android:drawablePadding="8dp"
                    android:text="@string/prf3"
                    android:textColor="@android:color/white"
                    app:tint="@android:color/white" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonGenerateRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/tertiary"
                android:text="@string/button_generate_recipe" />

            <TextView
                android:id="@+id/textViewGeneratedRecipesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/title_generated_recipes"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardRecipe1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imageViewRecipe1"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ac1" />

                    <TextView
                        android:id="@+id/textViewRecipe1Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/recipe_1_title_placeholder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewRecipe1Info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/recipe_1_info_placeholder" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardRecipe2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imageViewRecipe2"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/aircp2" />

                    <TextView
                        android:id="@+id/textViewRecipe2Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/recipe_2_title_placeholder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewRecipe2Info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/recipe_2_info_placeholder" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>

